--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@
 
 
 
-.col1, .col2, .col3, .col4, .col5, .col6 {
+.col1, .col2, .col3, .col4, .col5, .col6, .col7 {
 	width: 50px;
 	height: 50px;
 	background-color: blue;
