--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 #row1, #row2,#row3,#row4,#row5,#row6 {
 	height: 50px;
-	width: 1000px;
+	width: 100%;
 	display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
@@ -11,17 +11,20 @@
 
 
 .col1, .col2, .col3, .col4, .col5, .col6, .col7 {
-	width: 50px;
+	display: flex;
+	width: 14%;
 	height: 50px;
-	background-color: blue;
+	/*background-color: blue;*/
 	border: 1px solid;
 	
 
 }
 
 .board-container {
+	/*display: flex;*/
 	width: 50%;
 	position: absolute;
 	left: 30%;
+	background-color: magenta;
 
 }
