--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,3 +54,11 @@
     background-color: white;
     opacity: .8;
 }
+
+#new-game-button {
+	height: 84px;
+  width: 220px;
+  font-size: 30px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px #0088FF;
+}
